fixed about wrap

--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -20,7 +20,7 @@
 
   .about_wrap {
     //margin-left: 15%;
-    width: 100%;
+    width: 70%;
     margin: auto;
   }
 }
